kubernetes-networks/dashboard/2_dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /dashboard(/|$)(.*)
#dashboard has basehref to / and relative paths of resources to it
#https://github.com/kubernetes/ingress-nginx/issues/2557#issuecomment-619513010
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
